# libclipboard

./: .gitignore  .travis.deploy.sh  .travis.yml  Cargo.toml  Jenkinsfile  README.md  deploy_key.enc
.github/workflows/: continuous-integration-workflow.yaml
libclipboard/: Cargo.toml
libclipboard-builder/: Cargo.toml
libclipboard-builder/src/: lib.rs  main.rs
libclipboard/src/: clipboard_context.rs  clipboard_extensions.rs  lib.rs
shared-library-builder/builder/: Cargo.toml
shared-library-builder/builder/src/: main.rs
src/: cstruct.rs  lib.rs
