[package]
name = "libclipboard"
version = "0.1.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2018"

[dependencies]
clipboard = "0.5.0"
boxer = { git = "https://github.com/feenkcom/gtoolkit-boxer", rev = "a79e2fd8003527ac52ddb7bc9968e5e7ead70448" }

[lib]
name = "Clipboard"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3