[package]
name = "libclipboard"
version = "0.1.0"
authors = ["Aliaksei Syrel <alex.syrel@gmail.com>"]
edition = "2018"

[dependencies]
clipboard = "0.5.0"
boxer = { git = "https://github.com/feenkcom/gtoolkit-boxer", rev = "8ffd345b6aabda55c5ab1b4914f6f3e5f92918d4" }

[lib]
name = "Clipboard"
crate-type = ["cdylib"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3