[package]
name = "libclipboard"
version = "1.1.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"

[dependencies]
copypasta = { git = "https://github.com/syrel/copypasta.git", rev = "c661ab3b8b894cdc7ef9f77c502d3a2d4ae1f40f" }
value-box = { version = "2.2", features = [ "phlow" ] }
string-box = "1.1"
value-box-ffi = { version = "1.1", features = [ "string-box", "phlow" ] }
phlow = "1.3"
phlow-extensions = "1.3"
phlow-ffi = { version = "1.1" }

[lib]
name = "Clipboard"
crate-type = ["cdylib"]
